# MurraxCoin-Discord-rs

./: Cargo.toml  README.md
src/: embed_macros.rs  main.rs
src/commands/: address.rs  balance.rs  claim.rs  leaderboard.rs  mod.rs  send.rs
