[package]
name = "murraxcoin_discord_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "*"
rand = "*"
anyhow = { version = "*", features = ["backtrace"] }
